tests/neg-custom-args/captures/i21347.check
-- Error: tests/neg-custom-args/captures/i21347.scala:4:15 -------------------------------------------------------------
4 |  ops.foreach: op => // error
  |               ^
  |               Local reach capability C leaks into capture scope of method runOps
5 |    op()
-- Error: tests/neg-custom-args/captures/i21347.scala:8:14 -------------------------------------------------------------
8 |  () => runOps(f :: Nil) // error
  |        ^^^^^^^^^^^^^^^^
  |        reference (caps.cap : caps.Capability) is not included in the allowed capture set {}
  |        of an enclosing function literal with expected type () -> Unit
-- Error: tests/neg-custom-args/captures/i21347.scala:11:15 ------------------------------------------------------------
11 |  ops.foreach: op => // error
   |               ^
   |               Local reach capability ops* leaks into capture scope of method runOpsAlt
12 |    op()
